--- a/index.html
+++ b/index.html
@@ -3,26 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Before and After Slider</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/davisdeatonphotography/before-after-slider/style.css">
-  <script src="https://cdn.jsdelivr.net/gh/davisdeatonphotography/before-after-slider/script.js" defer></script>
+  <title>Before and After Widget</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/davisdeatonphotography/before-after-slider@main/style.css">
 </head>
 <body>
-  <h1>328 Sundance</h1>
-  <div class="line"></div>
-
-  <div class="container">
-    <div id="before-after-slider">
-      <div id="before-image">
-        <img src="https://live.staticflickr.com/65535/52802232602_4155f5911d_5k.jpg" alt="before"/>
-      </div>
-      <div id="after-image">
-        <img src="https://live.staticflickr.com/65535/52802795271_460c894931_5k.jpg" alt="After"/>
-      </div>
-      <div id="resizer"></div>
-    </div>
+  <div class="image-comparison">
+    <img class="before-image" src="https://live.staticflickr.com/65535/52711542286_0c245ac49b_5k.jpg" alt="Before">
+    <img class="after-image" src="https://live.staticflickr.com/65535/52802795271_460c894931_5k.jpg" alt="After">
+    <div class="slider"></div>
   </div>
+
+  <script src="https://cdn.jsdelivr.net/gh/davisdeatonphotography/before-after-slider@main/script.js"></script>
 </body>
 </html>
-
-
