--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Before and After Widget</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/davisdeatonphotography/before-after-slider@main/style.css">
+  <link rel="stylesheet"href="https://cdn.jsdelivr.net/gh/davisdeatonphotography/before-after-slider@main/style.css">
 </head>
 <body>
   <div class="image-comparison">
-    <img class="before-image" src="https://live.staticflickr.com/65535/52802795271_460c894931_5k.jpg" alt="Before">
-    <img class="after-image" src="https://live.staticflickr.com/65535/52802232602_4155f5911d_5k.jpg" alt="After">
+    <h2 class="photo-name">Photo Name</h2>
+    <p class="photo-description">Photo description goes here.</p>
+    <img class="before-image" src="https://live.staticflickr.com/65535/52711542286_0c245ac49b_5k.jpg" alt="Before">
+    <img class="after-image" src="https://live.staticflickr.com/65535/52712018213_9c4c449d3a_5k.jpg" alt="After">
     <div class="slider"></div>
   </div>
 
