--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <div class="image-comparison">
-    <h2 class="photo-name">Photo Name</h2>
-    <p class="photo-description">Photo description goes here.</p>
+    <h2 class="photo-name">328 Sundance Trail</h2>
+    <p class="photo-description">Carbondale, Colorado - Aspen Glen.</p>
     <img class="before-image" src="https://live.staticflickr.com/65535/52802232602_4155f5911d_5k.jpg" alt="Before">
     <img class="after-image" src="https://live.staticflickr.com/65535/52802795271_460c894931_5k.jpg" alt="After">
     <div class="slider"></div>
