--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Before and After Widget</title>
-  <link rel="stylesheet"href="https://cdn.jsdelivr.net/gh/davisdeatonphotography/before-after-slider@main/style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/davisdeatonphotography/before-after-slider@main/styles.css">
 </head>
 <body>
   <div class="image-comparison">
-    <h2 class="photo-name">328 Sundance Trail</h2>
-    <p class="photo-description">Carbondale, Colorado - Aspen Glen.</p>
-    <img class="before-image" src="https://live.staticflickr.com/65535/52802232602_4155f5911d_5k.jpg" alt="Before">
-    <img class="after-image" src="https://live.staticflickr.com/65535/52802795271_460c894931_5k.jpg" alt="After">
-    <div class="slider"></div>
+    <h2 class="photo-name">Photo Name</h2>
+    <p class="photo-description">Photo description goes here.</p>
+    <div class="images-container">
+      <img class="before-image" src="https://live.staticflickr.com/65535/52802232602_4155f5911d_5k.jpg" alt="Before">
+      <img class="after-image" src="https://live.staticflickr.com/65535/52802795271_460c894931_5k.jpg" alt="After">
+      <div class="slider"></div>
+    </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/gh/davisdeatonphotography/before-after-slider@main/script.js"></script>
