--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Before and After Widget</title>
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/davisdeatonphotography/before-after-slider@main/styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/username/repo-name/css/styles.css">
 </head>
 <body>
   <div class="image-comparison">
@@ -14,8 +14,8 @@
     <div class="images-container">
       <div class="label before-label">Before</div>
       <div class="label after-label">After</div>
-      <img class="before-image" src="https://live.staticflickr.com/65535/52711542286_0c245ac49b_5k.jpg" alt="Before">
-      <img class="after-image" src="https://live.staticflickr.com/65535/52712018213_9c4c449d3a_5k.jpg" alt="After">
+      <img class="before-image" src="https://live.staticflickr.com/65535/52802232602_4155f5911d_5k.jpg " alt="Before">
+      <img class="after-image" src="https://live.staticflickr.com/65535/52802795271_460c894931_5k.jpg" alt="After">
       <div class="slider">
         <div class="slider-circle">
           <div class="slider-arrow"></div>
@@ -24,6 +24,6 @@
     </div>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/gh/davisdeatonphotography/before-after-slider@main/script.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/username/repo-name/js/script.js"></script>
 </body>
 </html>
