--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Before and After Widget</title>
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/username/repo-name/css/styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/davisdeatonphotography/before-after-slider@main/styles.css">
 </head>
 <body>
   <div class="image-comparison">
@@ -24,6 +24,6 @@
     </div>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/gh/username/repo-name/js/script.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/davisdeatonphotography/before-after-slider@main/script.js"></script>
 </body>
 </html>
