--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="image-comparison">
-    <h2 class="photo-name">Photo Name</h2>
+    <h2 class="photo-name">328 Sundance</h2>
     <p class="photo-description">Photo description goes here.</p>
     <div class="images-container">
       <div class="label before-label">Before</div>
