--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/davisdeatonphotography/before-after-slider@main/styles.css">
   <title>Before and After Image Slider</title>
 </head>
 <body>
@@ -20,6 +20,6 @@
     </div>
     <div class="photo-description">Photo description goes here...</div>
   </div>
-  <script src="scripts.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/davisdeatonphotography/before-after-slider@main/script.js"></script>
 </body>
 </html>
