--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <img class="after-image" src="https://live.staticflickr.com/65535/52802795271_460c894931_5k.jpg" alt="After">
       <div class="slider">
         <div class="slider-handle">
-          <span class="arrow"></span>
+          <img class="arrow" src="https://www.pngkey.com/png/full/79-796450_open-left-and-right-arrow-symbol.png" alt="Slide">
         </div>
       </div>
     </div>
