--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/davisdeatonphotography/before-after-slider@main/styles.css">
-  <title>Before and After Image Slider</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/davisdeatonphotography/before-after-slider@main/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
+    <title>Before and After Slider</title>
 </head>
 <body>
-  <div class="widget-wrapper">
-    <h1 class="photo-title">Photo Title</h1>
     <div class="slider-container">
-      <img class="before-image" src="https://live.staticflickr.com/65535/52802795271_460c894931_5k.jpg" alt="Before">
-      <img class="after-image" src="https://live.staticflickr.com/65535/52802232602_4155f5911d_5k.jpg" alt="After">
-      <div class="slider">
-        <div class="slider-handle">
-          <span class="arrow"></span>
+        <div class="text-container">
+            <h2 class="photo-name">Photo Name</h2>
+            <p class="photo-description">Description of the photo goes here.</p>
         </div>
-      </div>
+        <div class="image-container">
+            <img class="image before-image" src="https://live.staticflickr.com/65535/52802232602_4155f5911d_5k.jpg" alt="Before">
+            <img class="image after-image" src="https://live.staticflickr.com/65535/52802795271_460c894931_5k.jpg" alt="After">
+            <div class="slider">
+                <div class="slider-circle"></div>
+                <div class="slider-arrow"></div>
+            </div>
+        </div>
     </div>
-    <div class="photo-description">Photo description goes here...</div>
-  </div>
-  <script src="https://cdn.jsdelivr.net/gh/davisdeatonphotography/before-after-slider@main/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/davisdeatonphotography/before-after-slider@main/script.js"></script>
 </body>
 </html>
